--- a/.github/workflows/terraform-pr-checks.yaml
+++ b/.github/workflows/terraform-pr-checks.yaml
@@ -45,18 +45,18 @@ jobs:
         with:
           tflint_version: latest
 
-  tfsec:
-    runs-on: ubuntu-latest
+  # tfsec:
+  #   runs-on: ubuntu-latest
 
-    permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
-      pull-requests: write
+  #   permissions:
+  #     contents: read # for actions/checkout to fetch code
+  #     security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+  #     actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+  #     pull-requests: write
 
-    steps:
-      - name: Clone repo
-        uses: actions/checkout@master
+  #   steps:
+  #     - name: Clone repo
+  #       uses: actions/checkout@master
       # - name: tfsec
       #   uses: aquasecurity/tfsec-pr-commenter-action@v1.3.1
       #   with:
@@ -79,6 +79,12 @@ jobs:
   trivy:
     name: trivy
     runs-on: ubuntu-latest
+    permissions:
+      contents: read # for actions/checkout to fetch code
+      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
+      pull-requests: write
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
