--- a/.github/workflows/terraform-pr-checks.yaml
+++ b/.github/workflows/terraform-pr-checks.yaml
@@ -94,7 +94,7 @@ jobs:
         with:
           scan-type: 'config'
           hide-progress: false
-          format: 'sarid'
+          format: 'sarif'
           output: 'trivy-results.sarif'
           exit-code: '1'
           ignore-unfixed: false
