--- a/.github/workflows/terraform-pr-checks.yaml
+++ b/.github/workflows/terraform-pr-checks.yaml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: latest
+          terraform_version: 1.5.7
 
       - name: Terraform Format Check
         run: terraform fmt -check
